docs-archive/apache-airflow-providers-microsoft-winrm/3.14.4/_sources/_api/airflow/providers/microsoft/winrm/operators/winrm/index.rst.txt
airflow.providers.microsoft.winrm.operators.winrm
=================================================

.. py:module:: airflow.providers.microsoft.winrm.operators.winrm


Classes
-------

.. autoapisummary::

   airflow.providers.microsoft.winrm.operators.winrm.WinRMOperator


Module Contents
---------------

.. py:class:: WinRMOperator(*, winrm_hook = None, ssh_conn_id = None, remote_host = None, command = None, ps_path = None, output_encoding = 'utf-8', max_output_chunks = 100, timeout = None, poll_interval = None, expected_return_code = 0, working_directory = None, deferrable = conf.getboolean('operators', 'default_deferrable', fallback=False), **kwargs)

   Bases: :py:obj:`airflow.providers.common.compat.sdk.BaseOperator`


   WinRMOperator to execute commands on given remote host using the winrm_hook.

   :param winrm_hook: predefined ssh_hook to use for remote execution
   :param ssh_conn_id: connection id from airflow Connections
   :param remote_host: remote host to connect
   :param command: command to execute on remote host. (templated)
   :param ps_path: path to powershell, `powershell` for v5.1- and `pwsh` for v6+.
       If specified, it will execute the command as powershell script.
   :param output_encoding: the encoding used to decode stout and stderr
   :param max_output_chunks: Maximum number of stdout/stderr chunks to keep in a rolling buffer to prevent
       excessive memory usage for long-running commands in deferrable mode, defaults to 100.
   :param timeout: timeout for executing the command, defaults to 10.
   :param poll_interval: How often, in seconds, the trigger should poll the output command of the launched command,
       defaults to 1.
   :param expected_return_code: expected return code value(s) of command.
   :param working_directory: specify working directory.
   :param deferrable: Run operator in the deferrable mode


   .. py:attribute:: template_fields
      :type:  collections.abc.Sequence[str]
      :value: ('command', 'working_directory')



   .. py:attribute:: template_fields_renderers


   .. py:attribute:: winrm_hook
      :value: None



   .. py:attribute:: ssh_conn_id
      :value: None



   .. py:attribute:: remote_host
      :value: None



   .. py:attribute:: command
      :value: None



   .. py:attribute:: ps_path
      :value: None



   .. py:attribute:: output_encoding
      :value: 'utf-8'



   .. py:attribute:: max_output_chunks
      :value: 100



   .. py:attribute:: poll_interval


   .. py:attribute:: expected_return_code
      :value: 0



   .. py:attribute:: working_directory
      :value: None



   .. py:attribute:: deferrable


   .. py:property:: hook
      :type: airflow.providers.microsoft.winrm.hooks.winrm.WinRMHook



   .. py:method:: execute(context)

      Derive when creating an operator.

      The main method to execute the task. Context is the same dictionary used
      as when rendering jinja templates.

      Refer to get_template_context for more context.



   .. py:method:: validate_return_code(return_code)


   .. py:method:: evaluate_result(return_code, stdout_buffer, stderr_buffer)


   .. py:method:: execute_complete(context, event)

      Execute callback when WinRMCommandOutputTrigger finishes execution.

      This method gets executed automatically when WinRMCommandOutputTrigger completes its execution.



